# layernetes

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/workflows/: ci.yml  site.yml
docs/: ONBOARDING.md  QA.md  REMOTE-ACCESS.md  TALOS.md  cloudflare-setup.md
docs/blog/: introducing-layernetes.md
hack/: admin-delete-agent.sh  kiac-load.sh  kiac-net-offload-fix.sh  kiac-registry-trust.sh  provision-users.sh  talos-bootstrap.sh
ll-api/: .dockerignore  Dockerfile  pyproject.toml
ll-api/app/: auth.py  gitea.py  kube.py  main.py  models.py
ll-api/tests/: conftest.py  test_api.py  test_gitea.py  test_kube.py
ll-infra/: Chart.yaml  README.md  values-kiac.yaml  values-local.yaml  values-talos.yaml  values-wtp.yaml  values.yaml
ll-infra/argocd/: application.yaml  project.yaml
ll-infra/crds/: llagent.yaml
ll-infra/templates/: _helpers.tpl
ll-infra/templates/act-runner/: configmap.yaml  deployment.yaml  token-secret.yaml
ll-infra/templates/cloudflared/: deployment.yaml  secret.yaml
ll-infra/templates/gitea/: admin-secret.yaml  registry-direct-service.yaml
ll-infra/templates/ll-api/: deployment.yaml  ingress.yaml  rbac.yaml  service.yaml  serviceaccount.yaml
ll-infra/templates/ll-operator/: deployment.yaml  rbac.yaml  serviceaccount.yaml
ll-operator/: Dockerfile  pyproject.toml
ll-operator/operator/: builders.py  k8s.py  main.py
ll-operator/tests/: conftest.py  test_builders.py  test_k8s.py  test_main.py  test_phase.py
ll-tofu/: .gitignore  README.md  access.tf  outputs.tf  pages.tf  providers.tf  terraform.tfvars.example  tunnel.tf  variables.tf  versions.tf
llagent-base/: Dockerfile  README.md  entrypoint.sh  server.py
llagent-base/tests/: conftest.py  test_server.py
llnate/: CHANGELOG.md  pyproject.toml
llnate/llnate/: __init__.py  api.py  cli.py  config.py  project.py  scaffold.py
llnate/tests/: conftest.py  test_init.py  test_keys.py  test_login.py  test_push.py  test_status_delete.py
site/: .env.example  README.md  STYLEGUIDE.md  astro.config.mjs  package-lock.json  package.json  posthog-setup-report.md
site/public/: AGENTS-SETUP.md  _redirects  llms-full.txt  llms.txt  robots.txt
site/src/: content.config.ts
site/src/components/: CopyIcon.astro  Footer.astro  Logo.astro  Nav.astro  posthog.astro
site/src/content/docs/: ONBOARDING.md  REMOTE-ACCESS.md  index.mdx  overview.md
site/src/content/docs/blog/: introducing-layernetes.md
site/src/data/: cli-tools.js
site/src/layouts/: Base.astro
site/src/pages/: index.astro
site/src/pages/blog/: index.astro
site/src/pages/blog/introducing-layernetes/: index.astro
site/src/scripts/: cli-selector.js  copy.js  shader-bg.js
site/src/styles/: global.css
