[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ll-api"
version = "0.1.0"
description = "Layernetes control-plane API: login, Gitea repo provisioning, age keypair issuance, deploy status"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "pydantic>=2.6",
    "kubernetes>=29.0",
    "pyrage>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
