[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ll-operator"
version = "0.1.0"
description = "Layernetes Kubernetes operator: reconciles LLAgent custom resources into per-agent namespaces, deployments, services, ingresses, and network policies."
requires-python = ">=3.11"
dependencies = [
    "kopf>=1.37,<2",
    "kubernetes>=29,<34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
]

# The handler code lives in operator/ (deliberately no __init__.py) and is
# run by file path (`kopf run /app/operator/main.py`), never installed into
# site-packages: a top-level package named `operator` would shadow the Python
# stdlib `operator` module for the whole environment. Installing this project
# therefore only pulls in the dependencies above.
[tool.setuptools]
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]
