[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llnate"
version = "0.1.0"
description = "Layernetes CLI: scaffold, ship, and host CrewAI agents on the Learning Layer cloud"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
]

[project.optional-dependencies]
rich = ["rich>=13"]
dev = [
    "pytest>=8",
    "respx>=0.21",
    "pyyaml>=6",
]

[project.scripts]
llnate = "llnate.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["llnate"]

[tool.pytest.ini_options]
testpaths = ["tests"]
