[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "llnate"
dynamic = ["version"]
description = "Layernetes CLI: scaffold, ship, and host CrewAI agents on the Learning Layer cloud"
license = "AGPL-3.0-or-later"
authors = [{ name = "Sanscourier.ai", email = "business@sanscourier.ai" }]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
]

[project.optional-dependencies]
rich = ["rich>=13"]
dev = [
    "pytest>=8",
    "respx>=0.21",
    "pyyaml>=6",
]

[project.scripts]
llnate = "llnate.cli:app"

[tool.hatch.version]
path = "llnate/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["llnate"]

[tool.pytest.ini_options]
testpaths = ["tests"]
